[gd_scene load_steps=73 format=2]

[ext_resource path="res://Wizard Assets/Run.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Wizard Assets/Idle.png" type="Texture" id=3]
[ext_resource path="res://Wizard Assets/Hit.png" type="Texture" id=4]
[ext_resource path="res://Wizard Assets/Attack1.png" type="Texture" id=5]
[ext_resource path="res://Wizard Assets/Attack2.png" type="Texture" id=6]
[ext_resource path="res://Wizard Assets/Fall.png" type="Texture" id=7]
[ext_resource path="res://Wizard Assets/Wizard Charge.png" type="Texture" id=8]
[ext_resource path="res://Wizard Assets/PurpleBeam.png" type="Texture" id=9]
[ext_resource path="res://Wizard Assets/Death.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 256, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 256, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 9 )
region = Rect2( 0, 128, 256, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 9 )
region = Rect2( 0, 192, 256, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 9 )
region = Rect2( 0, 256, 256, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 9 )
region = Rect2( 0, 320, 256, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 9 )
region = Rect2( 0, 384, 256, 64 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "beam",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=55]
radius = 24.0
height = 310.0

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "attack2",
"speed": 8.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "charge",
"speed": 16.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": false,
"name": "die",
"speed": 8.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "hit",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 23.5, 33.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="MagicBeam" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="BeamSprite" type="AnimatedSprite" parent="MagicBeam"]
visible = false
position = Vector2( 194, -13 )
scale = Vector2( 1.5, 2 )
frames = SubResource( 54 )
animation = "beam"

[node name="BeamCollision" type="CollisionShape2D" parent="MagicBeam"]
position = Vector2( 208, -12 )
rotation = 1.5708
shape = SubResource( 55 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 9 )
animation = "die"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 4 )
shape = SubResource( 38 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 2.03
one_shot = true

[node name="ChargeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="MagicBeam" to="." method="_on_MagicBeam_area_entered"]
[connection signal="body_entered" from="MagicBeam" to="." method="_on_MagicBeam_body_entered"]
[connection signal="animation_finished" from="MagicBeam/BeamSprite" to="." method="_on_BeamSprite_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
